Добавил запрос для создания тендеров списком